[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
streamlit = "^1.20.0"
langchain = "^0.0.123"
pinecone-client = "^2.2.1"
openai = "^0.27.2"
audio-recorder-streamlit = "^0.0.8"
requests = "^2.28.2"
ffmpeg = "1.4"
sox = "1.4.1"
pydub = "0.25.1"
mutagen = "1.46.0"
SpeechRecognition = "^3.10.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"